# Weaver_agent

./: .env.example  .fcignore  .gitignore  CLAUDE.md  DESIGN.md  Dockerfile  README.md  RESUME.md  TRACEABILITY.md  backend.spec  docker-compose.yml  package-lock.json  pyinstaller.spec  pyproject.toml  requirements.txt  run.py  s.yaml  show.vbs  show_overlay.bat
.github/workflows/: release.yml
desktop/: index.html  package-lock.json  package.json  tsconfig.node.json
desktop/src/: App.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
docker/: healthcheck.py
fc/: bootstrap  bootstrap-async-worker
layer/: requirements-layer.txt
scripts/: build_backend.bat  build_exe.bat  generate_icon.py
skills/: business_model_canvas.md  product_requirements.md  software_architecture.md  system_design.md
src/: fc_async_worker.py  main.py  server_entry.py
src/agents/: architect.py  base.py  collector.py  critic.py  critic_pass1.py  inquisitor.py  monitor.py  weaver.py
src/api/: dependencies.py  server.py  websocket_manager.py
src/core/: deepseek_service.py  embeddings.py  graph_ops.py  llm_service.py  models.py  node_contracts.py  retrieval.py  state_manager.py  trigger.py  workflow.py
src/services/: weaving_service.py
src/storage/: cluster_repo.py  database.py  design_repo.py  file_store.py  idea_repo.py  session_repo.py  vector_store.py
src/ui/: hotkey_listener.py  overlay_window.py  tray_app.py
src/utils/: config.py  logging_config.py  (+4 more)
tests/: conftest.py  test_agents.py  test_api.py  test_e2e.py  test_eval.py  test_integration.py  test_models.py
(+45 files in other folders)
