[project]
name = "idea-weaver"
version = "0.1.0"
description = "碎碎念到结构化设计文档的 AI 助手 —— 快捷键唤起，多模态输入"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Idea Weaver Team"}]
readme = "README.md"

dependencies = [
    # Web
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    # Agent orchestration
    "langgraph>=0.2.0",
    "langgraph-checkpoint-sqlite>=0.1.0",
    # LLM abstraction
    "litellm>=1.40.0",
    # Data
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.20.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    # Vector store
    "chromadb>=0.5.0",
    # Graph
    "networkx>=3.3",
    # HTTP client
    "httpx>=0.27.0",
    # Voice
    "openai-whisper>=20231117",
    # UI
    "pywebview>=5.2.0",
    "pystray>=0.19.0",
    "pynput>=1.7.0",
    # Utils
    "loguru>=0.7.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
